--- a/public/homework/3_bootstrap_cheatsheet/cheatsheet_start.html
+++ b/public/homework/3_bootstrap_cheatsheet/cheatsheet_start.html
@@ -85,17 +85,35 @@
           <i class="fa fa-question-circle"></i>
         </a>
       </h2>
-    </div>
+
+        <div class="page-header">
+          <h1>Example page header
+          <small>Subtext for header</small></h1>
+        </div>
+      </div>
 
     <a name="typography"></a>
     <div class="page-header">
       <h2>
         Typography
-        <a href="http://getbootstrap.com/css/#type" target="_blank" class="btn btn-default btn-xs">
-          <i class="fa fa-question-circle"></i>
-        </a>
+          <a href="http://getbootstrap.com/css/#type" target="_blank" class="btn btn-default btn-xs">
+            <i class="fa fa-question-circle"></i>
+          </a>
+        <div class="page-header">
+          <h1>Example page header <small>Subtext for header</small></h1>
+        </div>
+        <div class"page-header">
+            Create lighter, secondary text in any heading with a generic <small> tag or the .small class.
+          <h1>h1. Bootstrap heading <small>Secondary text</small></h1>
+          <h2>h2. Bootstrap heading <small>Secondary text</small></h2>
+          <h3>h3. Bootstrap heading <small>Secondary text</small></h3>
+          <h4>h4. Bootstrap heading <small>Secondary text</small></h4>
+          <h5>h5. Bootstrap heading <small>Secondary text</small></h5>
+          <h6>h6. Bootstrap heading <small>Secondary text</small></h6>
+        </div>
       </h2>
     </div>
+
 
     <a name="buttons"></a>
     <div class="page-header">
@@ -112,18 +130,146 @@
             <li><a href="http://getbootstrap.com/components/#btn-dropdowns" target="_blank">Button Dropdowns</a></li>
           </ul>
         </div>
+        <a class="btn btn-default" href="#" role="button">Link</a>
+        <button class="btn btn-default" type="submit">Button</button>
+        <input class="btn btn-default" type="button" value="Input">
+        <input class="btn btn-default" type="submit" value="Submit">
       </h2>
     </div>
 
-    <a name="navbars"></a>
+
     <div class="page-header">
       <h2>
-        Navbars
-        <a href="http://getbootstrap.com/components/#navbar" target="_blank" class="btn btn-default btn-xs">
-          <i class="fa fa-question-circle"></i>
-        </a>
+        Buttons with Color
+        <div class="btn-group">
+          <a href="http://getbootstrap.com/css/#buttons" target="_blank" class="btn btn-default btn-xs">
+            <i class="fa fa-question-circle"></i>
+          </a>
+          <a href="#buttons" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="http://getbootstrap.com/css/#buttons" target="_blank">Colors, sizes, and states</a></li>
+            <li><a href="http://getbootstrap.com/components/#btn-groups" target="_blank">Button Groups</a></li>
+            <li><a href="http://getbootstrap.com/components/#btn-dropdowns" target="_blank">Button Dropdowns</a></li>
+          </ul>
+        </div>
+              <!-- Standard button -->
+              <button type="button" class="btn btn-default">Default</button>
+
+              <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+              <button type="button" class="btn btn-primary">Primary</button>
+
+              <!-- Indicates a successful or positive action -->
+              <button type="button" class="btn btn-success">Success</button>
+
+              <!-- Contextual button for informational alert messages -->
+              <button type="button" class="btn btn-info">Info</button>
+
+              <!-- Indicates caution should be taken with this action -->
+              <button type="button" class="btn btn-warning">Warning</button>
+
+              <!-- Indicates a dangerous or potentially negative action -->
+              <button type="button" class="btn btn-danger">Danger</button>
+
+              <!-- Deemphasize a button by making it look like a link while maintaining button behavior -->
+              <button type="button" class="btn btn-link">Link</button>
       </h2>
     </div>
+
+    <div class="page-header">
+      <h2>
+        Buttons Sizes
+        <div class="btn-group">
+          <a href="http://getbootstrap.com/css/#buttons" target="_blank" class="btn btn-default btn-xs">
+            <i class="fa fa-question-circle"></i>
+          </a>
+          <a href="#buttons" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="http://getbootstrap.com/css/#buttons" target="_blank">Colors, sizes, and states</a></li>
+            <li><a href="http://getbootstrap.com/components/#btn-groups" target="_blank">Button Groups</a></li>
+            <li><a href="http://getbootstrap.com/components/#btn-dropdowns" target="_blank">Button Dropdowns</a></li>
+          </ul>
+        </div>
+          <p>
+            <button type="button" class="btn btn-primary btn-lg">Large button</button>
+            <button type="button" class="btn btn-default btn-lg">Large button</button>
+          </p>
+          <p>
+            <button type="button" class="btn btn-primary">Default button</button>
+            <button type="button" class="btn btn-default">Default button</button>
+          </p>
+          <p>
+            <button type="button" class="btn btn-primary btn-sm">Small button</button>
+            <button type="button" class="btn btn-default btn-sm">Small button</button>
+          </p>
+          <p>
+            <button type="button" class="btn btn-primary btn-xs">Extra small button</button>
+            <button type="button" class="btn btn-default btn-xs">Extra small button</button>
+          </p>
+        </h2>
+        </div>
+
+        <a name="navbars"></a>
+        <div class="page-header">
+          <h2>
+          Navbar Devault
+            <a href="http://getbootstrap.com/components/#navbar" target="_blank" class="btn btn-default btn-xs">
+              <i class="fa fa-question-circle"></i>
+            </a>
+            <nav class="navbar navbar-default">
+              <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="#">Brand</a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">Link</a></li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">One more separated link</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                  <form class="navbar-form navbar-left" role="search">
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                  </form>
+                  <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Link</a></li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div><!-- /.navbar-collapse -->
+              </div><!-- /.container-fluid -->
+            </nav>
+          </h2>
+        </div>
 
     <a name="tables"></a>
     <div class="page-header">
@@ -132,6 +278,9 @@
         <a href="http://getbootstrap.com/css/#tables" target="_blank" class="btn btn-default btn-xs">
           <i class="fa fa-question-circle"></i>
         </a>
+        <table class="table">
+          ...
+        </table>
       </h2>
     </div>
 
@@ -142,8 +291,30 @@
         <a href="http://getbootstrap.com/css/#forms" target="_blank" class="btn btn-default btn-xs">
           <i class="fa fa-question-circle"></i>
         </a>
+        <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputFile">File input</label>
+            <input type="file" id="exampleInputFile">
+            <p class="help-block">Example block-level help text here.</p>
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox"> Check me out
+            </label>
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
       </h2>
     </div>
+
 
     <a name="navs"></a>
     <div class="page-header">
